<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noiseapps.websockets.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/messagesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/controls"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/messageInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/your_message" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sendMessage"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send" />
            </LinearLayout>

            <Button
                android:id="@+id/disconnect"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnect" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/configurationView"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/serverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_server_address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nicknameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_nickname" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/statusMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/connect"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />
    </LinearLayout>

</FrameLayout>
